[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Popup for level transition.png" type="Texture" id=1]
[ext_resource path="res://Elements/Buttons/Popup Buttons/Replay_level_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elements/Buttons/Popup Buttons/Home_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game&UI/Level_failed.gd" type="Script" id=4]
[ext_resource path="res://Assets/m3x6.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[node name="Level_failed" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 119.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Ngwwa! You died :("

[node name="Home_button" parent="." instance=ExtResource( 3 )]
margin_right = 51.0

[node name="Replay_level_button" parent="." instance=ExtResource( 2 )]
margin_right = 117.0

[connection signal="pressed" from="Home_button" to="." method="_on_Home_button_pressed"]
[connection signal="pressed" from="Replay_level_button" to="." method="_on_Replay_level_button_pressed"]
